# iceberg_geometry

./: .gitignore  README.md  pyproject.toml
notebooks/: create_iceberg_geom.ipynb
src/iceberg_geometry/: __init__.py  constants.py  iceberg.py
src/iceberg_geometry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
