[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iceberg-geometry"
version = "0.1.0"
description = "Iceberg geometry and stability model (Moon et al. 2018)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "xarray",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]
